--- a/app/Resources/views/genre/all.html.twig
+++ b/app/Resources/views/genre/all.html.twig
@@ -1,3 +1,5 @@
 {% for genre in genres %}
-		<li><a href="{{ path('genre_show', { 'id': genre.id }) }}">{{ genre.name }}</a></li>
+	<li>
+		<a href="{{ path('genre_show', {'id': genre.id}) }}">{{ genre.name }}</a>
+	</li>
 {% endfor %}
