--- a/app/Resources/views/quote/show.html.twig
+++ b/app/Resources/views/quote/show.html.twig
@@ -13,6 +13,14 @@
                 <th>Contents</th>
                 <td>{{ quote.contents }}</td>
             </tr>
+            <tr>
+                <th>By</th>
+                <td>{{ quote.author.name }}</td>
+            </tr> 
+            <tr>
+                <th>From</th>
+                <td>{{ quote.book.title }}</td>
+            </tr>                        
         </tbody>
     </table>
 
